--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ log = "0.4"
 pretty_env_logger = "0.4"
 regex = "1.3"
 anyhow = "1.0"
+serde = "1.0"
+serde_derive = "1.0"
+serde_yaml = "0.8"
+itertools = "0.9"
 
 [build-dependencies]
 vergen = "3"
