--- a/experiments/debug.yml
+++ b/experiments/debug.yml
@@ -1,19 +1,19 @@
 ---
 datasets:
   - ZipfUniform:
-      seed: [123,1234]
-      n: [10000, 100000]
+      seed: [123]
+      n: [100000]
       exponent: [0.4]
       max_start_time: [1000]
 queries:
   - ZipfUniform:
-      seed: [23512,1346134]
-      n: [50, 500]
+      seed: [23512]
+      n: [50, 5000]
       exponent: [0.4]
       max_start_time: [1000]
       max_duration_factor: [0.5]
 algorithms:
   - LinearScan
   - PeriodIndex:
-      bucket_length: [16,32,64,128]
-      num_levels: [1, 2, 3, 4]
+      bucket_length: [64,128]
+      num_levels: [4]
