Measure the memory consumed by indices

--- a/experiments/debug.yml
+++ b/experiments/debug.yml
@@ -16,6 +16,6 @@ algorithms:
   - BTree
   - LinearScan
   - IntervalTree
-  # - PeriodIndex:
-  #     bucket_length: [512]
-  #     num_levels: [4]
+  - PeriodIndex:
+      bucket_length: [65536]
+      num_levels: [4]
