Specify desired number of buckets in PeriodIndex
Previously we specified the bucket length, which required a lot of
guessing to parameterize meaningfully.
This change required to bump the version number of the algortihm to 2

--- a/experiments/debug.yml
+++ b/experiments/debug.yml
@@ -17,5 +17,5 @@ algorithms:
   - LinearScan
   - IntervalTree
   - PeriodIndex:
-      bucket_length: [4096]
+      num_buckets: [16, 32, 64, 128, 256]
       num_levels: [4]
