--- a/experiments/scalability_n.yml
+++ b/experiments/scalability_n.yml
@@ -19,6 +19,8 @@ queries:
 algorithms:
   - BTree
   - IntervalTree
+  - Grid:
+      bucket_size: [128, 256, 512]
   - PeriodIndex:
       num_buckets: [16, 32, 64, 128]
       num_levels: [4]
