--- a/experiments/scalability_n.yml
+++ b/experiments/scalability_n.yml
@@ -20,7 +20,7 @@ algorithms:
   - BTree
   - IntervalTree
   - Grid:
-      bucket_size: [128, 256, 512]
+      bucket_size: [4096, 8192]
   - PeriodIndex:
       num_buckets: [16, 32, 64, 128]
       num_levels: [4]
