No longer report information about the dataset in the DB

--- a/experiments/scalability_n.yml
+++ b/experiments/scalability_n.yml
@@ -4,10 +4,8 @@ datasets:
       seed: [123]
       n: 
         - 1000000
-        - 10000000
-        - 100000000
       exponent: [1]
-      max_start_time: [1000000]
+      max_start_time: [100000]
 queries:
   - ZipfUniform:
       seed: [23512]
