--- a/experiments/conference.yml
+++ b/experiments/conference.yml
@@ -2,19 +2,26 @@
 # the conference paper.
 ---
 datasets:
-  - ZipfUniform:
+  - Random:
       seed: [123]
       n: 
         - 1000000
-      exponent: [1]
-      max_start_time: [1000]
+      start_times: 
+        - Uniform: { low: 1, high: 1000 }
+      durations:
+        - Zipf: { n: 1000000, beta: 1 }
 queries:
-  - ZipfUniform:
+  - Random:
       seed: [23512]
       n: [5000]
-      exponent: [1]
-      max_start_time: [1000]
-      max_duration_factor: [2]
+      start_times: 
+        - Uniform: { low: 1, high: 1000 }
+      durations:
+        - Zipf: { n: 1000000, beta: 1 }
+      start_durations: 
+        - Uniform: { low: 1, high: 100 }
+      duration_durations:
+        - Uniform: { low: 1, high: 100 }
 algorithms:
   - LinearScan
   - BTree
