Add experiments with just range queries

--- a/experiments/scalability_n.yml
+++ b/experiments/scalability_n.yml
@@ -24,6 +24,7 @@ queries:
             Uniform: { low: 1, high: 100 },
             Uniform: { low: 1, high: 100 },
         ]
+        - Free
 
 algorithms:
   - LinearScan
