--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ serde_derive = "1.0"
 serde_yaml = "0.8"
 itertools = "0.9"
 deepsize = "0.1"
+sysinfo = "0.15"
 
 [dev-dependencies]
 paste = "1.0"
