--- a/experiments/debug.yml
+++ b/experiments/debug.yml
@@ -1,25 +1,30 @@
 ---
 - datasets:
-  - ZipfUniform:
-      seed: [123]
-      n: [1000000]
-      exponent: [1]
-      max_start_time: [1000]
+    - Random:
+        seed: [123]
+        n: 
+          - 1000000
+        start_times:
+          - Uniform:
+              { low: 1, high: 100000 }
+        durations:
+          - Zipf: { n: 1000000, beta: 1 }
+
   queries:
-  - ZipfUniform:
-      seed: [23512]
-      n: [5000]
-      exponent: [1]
-      max_start_time: [1000]
-      max_duration_factor: [2]
+    - Random:
+        seed: [23512]
+        n: [5000]
+        range:
+          - Pair: [
+              Uniform: { low: 1, high: 100000 },
+              Zipf: { n: 1000000, beta: 1 }
+          ]
+        duration:
+          - Pair: [
+              Uniform: { low: 1, high: 100 },
+              Uniform: { low: 1, high: 100 },
+          ]
+          - Free
+
   algorithms:
-  - BTree
-  - Grid:
-      num_buckets: [128]
-  - Grid3D:
-      num_buckets: [128]
-  - LinearScan
-  - IntervalTree
-  - PeriodIndex:
-      num_buckets: [16, 32, 64, 128, 256]
-      num_levels: [4]
+    - NestedBTree
