Add nested vecs to the all file

--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -30,6 +30,7 @@
     - LinearScan
     - BTree
     - NestedBTree
+    - NestedVecs
     - IntervalTree
     - Grid:
         num_buckets: [16, 32, 64, 128]
@@ -74,6 +75,7 @@
     - LinearScan
     - BTree
     - NestedBTree
+    - NestedVecs
     - IntervalTree
     - Grid:
         num_buckets: [16, 32, 64, 128]
