--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -64,6 +64,7 @@
               Uniform: { low: 1, high: 100000 },
               Zipf: { n: 1000000, beta: 1 }
           ]
+          - Free
         duration:
           - Pair: [
               Uniform: { low: 1, high: 100 },
