--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -85,3 +85,46 @@
     - PeriodIndex:
         num_buckets: [16, 32, 64, 128]
         num_levels: [4,32]
+
+# very large and sparse dataset
+- datasets:
+    - Random:
+        seed: [123]
+        n: 
+          - 1000000000
+        start_times:
+          - Uniform:
+              { low: 1, high: 1000000000 }
+        durations:
+          - Zipf: { n: 1000000000, beta: 1 }
+
+  queries:
+    - Random:
+        seed: [23512]
+        n: [5000]
+        range:
+          - Pair: [
+              Uniform: { low: 1, high: 1000000000 },
+              Zipf: { n: 1000000000, beta: 1 }
+          ]
+          - Free
+        duration:
+          - Pair: [
+              Uniform: { low: 1, high: 100 },
+              Uniform: { low: 1, high: 100 },
+          ]
+          - Free
+
+  algorithms:
+    - BTree
+    - NestedBTree
+    - NestedVecs
+    - IntervalTree
+    - Grid:
+        num_buckets: [16, 32, 64, 128]
+    - Grid3D:
+        num_buckets: [16, 32, 64, 128]
+    - PeriodIndex:
+        num_buckets: [16, 32, 64, 128]
+        num_levels: [4,32]
+
