Re-enable period-index-* in the experiments

--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -39,9 +39,9 @@
     - PeriodIndex:
         num_buckets: [16, 32, 64, 128]
         num_levels: [4]
-    # - PeriodIndexStar:
-    #     num_buckets: [16, 32, 64, 128]
-    #     num_levels: [4,32]
+    - PeriodIndexStar:
+        num_buckets: [16, 32, 64, 128]
+        num_levels: [4,32]
 
 
 ## ==================================================================
@@ -88,9 +88,9 @@
     - PeriodIndex:
         num_buckets: [16, 32, 64, 128]
         num_levels: [4,32]
-    # - PeriodIndexStar:
-    #     num_buckets: [16, 32, 64, 128]
-    #     num_levels: [4,32]
+    - PeriodIndexStar:
+        num_buckets: [16, 32, 64, 128]
+        num_levels: [4,32]
 
 # very large and sparse dataset
 - datasets:
@@ -133,7 +133,7 @@
     - PeriodIndex:
         num_buckets: [1024, 2048, 4096]
         num_levels: [4,32]
-    # - PeriodIndexStar:
-    #     num_buckets: [1024, 2048, 4096]
-    #     num_levels: [4,32]
+    - PeriodIndexStar:
+        num_buckets: [1024, 2048, 4096]
+        num_levels: [4,32]
 
