--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -42,6 +42,8 @@
     - PeriodIndexStar:
         num_buckets: [16, 32, 64, 128]
         num_levels: [4,32]
+    - PeriodIndexPlusPlus:
+        num_buckets: [100, 1000, 10000, 100000]
 
 
 ## ==================================================================
@@ -91,6 +93,8 @@
     - PeriodIndexStar:
         num_buckets: [16, 32, 64, 128]
         num_levels: [4,32]
+    - PeriodIndexPlusPlus:
+        num_buckets: [100, 1000, 10000, 100000]
 
 # very large and sparse dataset
 - datasets:
@@ -136,4 +140,6 @@
     - PeriodIndexStar:
         num_buckets: [1024, 2048, 4096]
         num_levels: [4,32]
+    - PeriodIndexPlusPlus:
+        num_buckets: [100, 1000, 10000, 100000]
 
