Fix bug in period-index++

--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -43,7 +43,7 @@
         num_buckets: [16, 32, 64, 128]
         num_levels: [4,32]
     - PeriodIndexPlusPlus:
-        num_buckets: [100, 1000, 10000, 100000]
+        num_buckets: [10, 100]
 
 
 ## ==================================================================
@@ -94,7 +94,7 @@
         num_buckets: [16, 32, 64, 128]
         num_levels: [4,32]
     - PeriodIndexPlusPlus:
-        num_buckets: [100, 1000, 10000, 100000]
+        num_buckets: [10, 100]
 
 # very large and sparse dataset
 - datasets:
@@ -141,5 +141,5 @@
         num_buckets: [1024, 2048, 4096]
         num_levels: [4,32]
     - PeriodIndexPlusPlus:
-        num_buckets: [100, 1000, 10000, 100000]
+        num_buckets: [10, 100]
 
