--- a/experiments/debug.yml
+++ b/experiments/debug.yml
@@ -5,8 +5,8 @@
         n: 
           - 1000000
         start_times:
-          - Uniform:
-              { low: 1, high: 100000 }
+          # - Uniform: { low: 1, high: 100000 }
+          - Clustered: { n: 100, high: 10000000, std_dev: 100 }
         durations:
           - Zipf: { n: 1000000, beta: 1 }
 
