--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -157,5 +157,5 @@
         num_buckets: [1024, 2048, 4096]
         num_levels: [4,32]
     - PeriodIndexPlusPlus:
-        num_buckets: [10, 50, 100]
+        num_buckets: [10, 16, 32, 50, 64, 100, 128]
 
