--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -97,5 +97,5 @@
         num_buckets: [1024, 2048, 4096]
         num_levels: [4,32]
     - PeriodIndexPlusPlus:
-        num_buckets: [10, 16, 32, 50, 64, 100, 128]
+        page_size: [10, 50, 100, 500]
 
