--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -99,3 +99,55 @@
     - PeriodIndexPlusPlus:
         page_size: [10, 50, 100, 500]
 
+
+# scalability experiments
+- datasets:
+    - Random:
+        seed: [123]
+        n: 
+          - 1000000
+          - 10000000
+          - 100000000
+          - 1000000000
+        start_times:
+          - Uniform: { low: 1, high: 1000000000 }
+        durations:
+          - Zipf: { n: 1000000000, beta: 1 }
+  queries:
+    - Random:
+        seed: [23512]
+        n: [5000]
+        range:
+          - Pair: [
+              Uniform: { low: 1, high: 1000000000 },
+              Zipf: { n: 1000000000, beta: 1 }
+          ]
+        duration:
+          # Long duration low selectivity
+          - Pair: [
+              Uniform: { low: 1, high: 10000 },
+              Uniform: { low: 1, high: 10000 },
+          ]
+          # Short duration high selectivity
+          - Pair: [
+              Uniform: { low: 1, high: 100 },
+              Uniform: { low: 1, high: 100 },
+          ]
+          # Short duration low selectivity
+          - Pair: [
+              Uniform: { low: 1, high: 100 },
+              Uniform: { low: 1, high: 10000 },
+          ]
+          # Long duration high selectivity
+          - Pair: [
+              Uniform: { low: 1, high: 10000 },
+              Uniform: { low: 1, high: 100 },
+          ]
+
+  algorithms:
+    - PeriodIndexPlusPlus:
+        page_size: [50]
+    - BTree
+    - PeriodIndexStar:
+        num_buckets: [2048]
+        num_levels: [128]
