Make the ecdf computation twice as fast
It's where period-index++ spends most of the time

--- a/experiments/debug.yml
+++ b/experiments/debug.yml
@@ -49,8 +49,8 @@
     # - PeriodIndexStar:
     #     num_buckets: [16]
     #     num_levels: [4,32]
-    # - PeriodIndexPlusPlus:
-    #     page_size: [100]
+    - PeriodIndexPlusPlus:
+        page_size: [100]
     # - Grid3D:
     #     num_buckets: [16]
     # - Grid:
@@ -59,6 +59,6 @@
     # - NestedBTree
     # - NestedVecs
     # - IntervalTree
-    - PeriodIndex:
-        num_buckets: [1024]
-        num_levels: [4]
+    # - PeriodIndex:
+    #     num_buckets: [1024]
+    #     num_levels: [4]
