--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -146,5 +146,5 @@
 
   algorithms:
     - PeriodIndexPlusPlus:
-        page_size: [100, 500, 1000, 50000, 10000]
+        page_size: [100, 500, 1000, 50000, 10000, 100000, 1000000, 10000000]
     - BTree
