--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -83,6 +83,8 @@
 
   algorithms:
     - BTree
+    - GridFile:
+        side_cells: [10, 100, 1000]
     - IntervalTree
     - PeriodIndexStar:
         num_buckets: [64, 128, 1024, 2048, 4096]
