--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -51,7 +51,7 @@
         side_cells: [10, 100, 1000]
     - IntervalTree
     - PeriodIndexStar:
-        num_buckets: [64, 128]
+        num_buckets: [32, 64, 128]
         num_levels: [4096]
     - PeriodIndexPlusPlus:
         page_size: [10, 50, 100, 500]
@@ -108,6 +108,6 @@
     - GridFile:
         side_cells: [100, 1000, 10000]
     - PeriodIndexStar:
-        num_buckets: [64, 128]
+        num_buckets: [32, 64, 128]
         num_levels: [4096]
 
