Update parameter range

--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -54,7 +54,7 @@
         num_buckets: [32, 64, 128]
         num_levels: [4096]
     - PeriodIndexPlusPlus:
-        page_size: [10, 50, 100, 500]
+        page_size: [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500]
 
 
 # scalability experiments
