--- a/experiments/param_influence.yml
+++ b/experiments/param_influence.yml
@@ -31,4 +31,4 @@
 
   algorithms:
     - PeriodIndexPlusPlus:
-        page_size: [1, 5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400]
+        page_size: [10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400]
