--- a/experiments/param_influence.yml
+++ b/experiments/param_influence.yml
@@ -8,6 +8,7 @@
           - 10000000
         start_times:
           - Uniform: { low: 1, high: 10000000 }
+          - Clustered: { n: 10, high: 10000000, std_dev: 100000 }
         durations:
           - Zipf: { n: 10000000, beta: 1 }
 
