Fix syntax in all.yml

--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -22,7 +22,7 @@
               Zipf: { n: 10000000, beta: 1 }
           ]
           - Pair: [
-              Clustered: { n: 10, high: 10000000, std_dev: 100000 }
+              Clustered: { n: 10, high: 10000000, std_dev: 100000 },
               Zipf: { n: 10000000, beta: 1 }
           ]
           - Free
