--- a/experiments/debug.yml
+++ b/experiments/debug.yml
@@ -1,66 +1,27 @@
 ---
 - datasets:
-    - Random:
-        seed: [123]
-        n: 
-          - 10000000
-        start_times:
-          # - Uniform: { low: 1, high: 100000 }
-          # - Clustered: { n: 100, high: 10000000, std_dev: 100 }
-          - Clustered: { n: 10, high: 10000000, std_dev: 10 }
-        durations:
-          - Zipf: { n: 1000000, beta: 1 }
+    - Csv:
+        path: webkit.txt
+        start_column: 0
+        end_column: 1
+        separator: 9
+        has_header: false
 
   queries:
-    - Mixed:
-      - Random:
-          seed: [10733]
-          n: [10]
-          range:
-            - Pair: [
-                Uniform: { low: 1, high: 100000 },
-                Zipf: { n: 1000000, beta: 1 }
-            ]
-            - Free
-          duration:
-            - Pair: [
-                Uniform: { low: 1, high: 10000 },
-                Uniform: { low: 1, high: 10000 },
-            ]
-            - Free
-
-    # - Random:
-    #     seed: [23512]
-    #     n: [5000]
-    #     range:
-    #       - Pair: [
-    #           Uniform: { low: 1, high: 100000 },
-    #           Zipf: { n: 1000000, beta: 1 }
-    #       ]
-    #       # - Free
-    #     duration:
-    #       - Pair: [
-    #           Uniform: { low: 1, high: 10000 },
-    #           Uniform: { low: 1, high: 10000 },
-    #       ]
-    #       # - Free
+    - Random:
+        seed: [23512]
+        n: [5000]
+        range:
+          - Pair: [
+              Uniform: { low: 1, high: 100000 },
+              Zipf: { n: 1000000, beta: 1 }
+          ]
+        duration:
+          - Pair: [
+              Uniform: { low: 1, high: 10000 },
+              Uniform: { low: 1, high: 10000 },
+          ]
 
   algorithms:
-    # - PeriodIndexStar:
-    #     num_buckets: [16]
-    #     num_levels: [4,32]
     - PeriodIndexPlusPlus:
         page_size: [100]
-    - GridFile:
-        side_cells: [100]
-    # - Grid3D:
-    #     num_buckets: [16]
-    # - Grid:
-    #     num_buckets: [16]
-    # - BTree
-    # - NestedBTree
-    # - NestedVecs
-    # - IntervalTree
-    # - PeriodIndex:
-    #     num_buckets: [1024]
-    #     num_levels: [4]
