Add tourism dataset

--- a/experiments/debug.yml
+++ b/experiments/debug.yml
@@ -1,13 +1,8 @@
 ---
 - datasets:
+    - Tourism
     - Webkit
     - Flight
-    # - Csv:
-    #     path: webkit.txt
-    #     start_column: 0
-    #     end_column: 1
-    #     separator: 9
-    #     has_header: false
 
   queries:
     - Random:
