--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ sysinfo = "0.15"
 rayon = "1.4"
 csv = "1.1"
 flate2 = "1.0.19"
-curl = "0.4"
+# curl = "0.4"
 # reqwest = {version = "0.10", features = ["blocking"]}
 
 [dev-dependencies]
