--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ rayon = "1.4"
 csv = "1.1"
 flate2 = "1.0.19"
 # curl = "0.4"
-# reqwest = {version = "0.10", features = ["blocking"]}
+reqwest = {version = "0.10", features = ["blocking"]}
 
 [dev-dependencies]
 paste = "1.0"
