--- a/experiments/real-world.yml
+++ b/experiments/real-world.yml
@@ -19,7 +19,7 @@
               Uniform: { low: 1, high: 365 }
 
   algorithms:
-    - LinearScan
+    # - LinearScan
     - BTree
     - GridFile:
         side_cells: [10, 100, 1000]
@@ -51,7 +51,7 @@
               Uniform: { low: 1, high: 94670777924 }
 
   algorithms:
-    - LinearScan
+    # - LinearScan
     - BTree
     - GridFile:
         side_cells: [10, 100, 1000]
@@ -83,7 +83,7 @@
               Uniform: { low: 1, high: 60 }
 
   algorithms:
-    - LinearScan
+    # - LinearScan
     - BTree
     - GridFile:
         side_cells: [10, 100, 1000]
